--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <nav>
             <a href="#">View High Scores</a>
         </nav>
+        <div id="timer-display">Time remaining: <span id="time-remaining"></span> seconds</div>
     </header>
 
     <main id="quiz-container">
