save scores to localStorage in order from highest to lowest

--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
 
     <header>
         <h1>Code Quiz</h1>
-        <nav>
-            <a href="#">View High Scores</a>
-        </nav>
+        <button>View High Scores</button>
         <div id="timer-display">Time remaining: <span id="time-remaining"></span> seconds</div>
     </header>
 
