add delay to display if question was answered correctly or incorrectly

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 
         <header>
             <h1>Coding Quiz</h1>
-            <div id="timer-display">Time remaining: <span id="time-remaining"></span> seconds</div>
             <button id="view-scores">View High Scores</button>
+            <button id="reload" class="hide"></button>
+            <div id="timer-display">Time remaining: <span id="time-remaining"></span> seconds</div>
         </header>
 
         <main>
